Basic reactjs templating.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>OptimalTinder</title>
-    <script src="js/main.js"></script>
+    <script src="build/main.js"></script>
 </head>
 <body>
- 
+  <div id="application"></div>
 </body>
 </html>
