Beautify by adding bootstrap.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>OptimalTinder</title>
-    <script src="build/main.js"></script>
+  <title>OptimalTinder</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+  <script src="build/main.js"></script>
 </head>
 <body>
   <div id="application"></div>
