--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>OptimalTinder</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="build/main.css">
@@ -8,6 +9,6 @@
 </head>
 <body>
   <div id="application"></div>
-  <script src="build/main.js"></script>
+  <script src="build/bundle.js"></script>
 </body>
 </html>
